--- a/templates/base.html
+++ b/templates/base.html
@@ -12,22 +12,56 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-     <link rel="stylesheet" href="{% static "style/xd.css" %}">
-    <!-- Nav icon -->
+     <link rel="stylesheet" href="{% static "style/base.css" %}">
+     <link rel="stylesheet" href="{% static "style/about.css" %}">
+
+
+
+
+
 </head>
 
 <body>
+<div id="sideMenu" class="sideMenu">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="{% url "About" %}">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+    <div>
+        <a href="#" >Shirts</a>
+        <a href="#" >Dresses</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Sccrrrr
+         </a>
+        </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropDownItems">
+                <a class="dropdown-item" href="#"><i class="fa fa-caret-right"></i>Skinny</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-caret-right"></i>Skinnyaaaaaaaaa</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-caret-right"></i>Skinny</a>
+            </div>
+        <a href="#" >Jackets</a>
+        <a href="#" >Gymwear</a>
+        <a href="#" >Blazers</a>
+        <a href="#" >Shoes</a>
+      </div>
+  <a href="#footer" >Contact</a>
+</div>
+
+
+
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <button class="btn btn-primary btn-lg btn-outline-success my-2 my-sm-0" type="submit">Menu</button>
+  <button class="btn btn-primary btn-lg btn-outline-success my-2 my-sm-0" type="submit"onclick="openNav()">&#9776;Menu</button>
 
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'Index' %}">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
       <div class="searchbar">
@@ -52,6 +86,20 @@
         <button>Sprawdź</button>
     </div>
 </div>
+{% block content %}
+
+{% endblock content %}
+
+
+<script>
+function openNav() {
+  document.getElementById("sideMenu").style.width = "300px";
+}
+
+function closeNav() {
+  document.getElementById("sideMenu").style.width = "0";
+}
+</script>
 
 
 
@@ -59,11 +107,7 @@
 
 
 
-
-
-
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
